--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
 .msg__container {
     background-color: #F0F4F8;
     border-radius: 5px;
-    padding: 16px;
+    padding: 12px 12px 12px 16px;
     margin-top: 12px;
     line-height: 1.5em;
 }
@@ -25,6 +25,12 @@
 
 .msg__mainText {
     white-space: pre;
+}
+
+.msg__mainText:empty:before {
+    content: 'Сообщение удалено.';
+    color: #929292;
+    font-style: italic;
 }
 
 quote {
