--- a/static/styles.css
+++ b/static/styles.css
@@ -1,14 +1,15 @@
 .msg__container {
+    margin-top: 12px;
     background-color: #F0F4F8;
     border-radius: 5px;
     padding: 12px 12px 12px 16px;
-    margin-top: 12px;
     line-height: 1.5em;
 }
 
 .msg__mineMsg {
     background-color: #C7EDFC;
     margin-left: 36px;
+    margin-right: 0;
 }
 
 .msg__mineMsg + .msg__mineMsg {
@@ -21,6 +22,20 @@
 
 .msg__mineMsg .msg__author {
     display: none;
+}
+
+.msg__dateGrouper {
+    text-align: center;
+    width: 100%;
+    height: 0.5em;
+    border-bottom: 1px solid #a5cede;
+    margin-top: 12px;
+    margin-bottom: 24px;
+}
+
+.msg__dateGrouper__text {
+    background-color: white;
+    padding: 0 10px;
 }
 
 .msg__mainText {
